--- a/main.html
+++ b/main.html
@@ -7,6 +7,22 @@
 </head>
 
 <body>
+	<h1>My Playlist</h1>
+	<div class="container">
+		<ul>
+			<li>song 1</li>
+			<li>song 2</li>
+			<li>song 3</li>
+			<li>song 4</li>
+			<li>song 5</li>
+		</ul>
+	</div>
+	<h2>Now Playing...</h2>
+	<div class="container-a">
+		<video src="https://www.w3schools.com/tags/movie.mp4" controls></video>
+		<h2>MP3 songs</h2>
+		<audio src="https://www.pagalworld.com.se/files/download/id/64630" controls></audio>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
