--- a/main.html
+++ b/main.html
@@ -10,11 +10,11 @@
 	<h1>My Playlist</h1>
 	<div class="container">
 		<ul>
-			<li>song 1</li>
-			<li>song 2</li>
-			<li>song 3</li>
-			<li>song 4</li>
-			<li>song 5</li>
+			<li><a href="#" target="_blank">song 1</a></li>
+			<li><a href="#" target="_blank">song 2</a></li>
+			<li><a href="#" target="_blank">song 3</a></li>
+			<li><a href="#" target="_blank">song 4</a></li>
+			<li><a href="#" target="_blank">song 5</a></li>
 		</ul>
 	</div>
 	<h2>Now Playing...</h2>
