--- a/main.html
+++ b/main.html
@@ -19,10 +19,14 @@
 	</div>
 	<h2>Now Playing...</h2>
 	<div class="container-a">
-		<video src="https://www.w3schools.com/tags/movie.mp4" controls></video>
-		<h2>MP3 songs</h2>
-		<audio src="https://www.pagalworld.com.se/files/download/id/64630" controls></audio>
-	</div>
+		<video class="player_one" controls>
+		<source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4" ></source>
+		</video>
+			<h2>MP3 songs</h2>
+		<audio class="player_two" controls>
+		<source src="https://www.pagalworld.com.se/files/download/id/64630" ></source>
+		</audio>
+		</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
