--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
 		</video>
 			<h2>MP3 songs</h2>
 		<audio class="player_two" controls>
-		<source src="https://www.pagalworld.com.se/files/download/id/64630" ></source>
+		<source src="https://www.pagalworld.com.se/files/download/id/64630" type="audio/.mp3" ></source>
 		</audio>
 		</div>
 	<!-- the entire body must be written by student -->
